--- a/3_CHL5230_F23.ipynb
+++ b/3_CHL5230_F23.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPkDVdMrkzt6OC9hmOXG9mZ",
+      "authorship_tag": "ABX9TyOikvDYYjBP/yDj1VVhlYn1",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1484,15 +1484,31 @@
         "# Initialize the KNN classifier\n",
         "knn = KNeighborsClassifier(n_neighbors=100)  # Setting K to 5 as an example\n",
         "\n",
+        "# Hyperparameters to tune\n",
+        "param_grid = {\n",
+        "    'n_neighbors': [5, 10, 20, 30, 40, 50, 75, 100], # number of neighbors\n",
+        "    'weights': ['uniform', 'distance'], # weight function used for prediction\n",
+        "    'metric': ['euclidean', 'manhattan', 'minkowski'], # distance matric\n",
+        "    'p': [1, 2] # Power parameter for the Minkowski metric. 1 is manhattan_distance and 2 is euclidean_distance.\n",
+        "}\n",
+        "\n",
+        "# Use GridSearchCV to find the best hyperparameters\n",
+        "knn_grid_search = GridSearchCV(estimator = knn,\n",
+        "                               param_grid = param_grid,\n",
+        "                               cv = 3, n_jobs = -1, verbose = 2,\n",
+        "                               scoring = 'accuracy')\n",
+        "\n",
         "# Train and predict the male data\n",
-        "knn.fit(X_train_male, y_train_male)\n",
-        "y_pred_male = knn.predict(X_test_male)\n",
+        "knn_grid_search.fit(X_train_male, y_train_male)\n",
+        "print(\"Best Parameters: \", knn_grid_search.best_params_)\n",
+        "y_pred_male = knn_grid_search.best_estimator_.predict(X_test_male)\n",
         "print(\"Classification Report for Males:\")\n",
         "print(classification_report(y_test_male, y_pred_male))\n",
         "\n",
         "# Train and predict the female data\n",
-        "knn.fit(X_train_female, y_train_female)\n",
-        "y_pred_female = knn.predict(X_test_female)\n",
+        "knn_grid_search.fit(X_train_female, y_train_female)\n",
+        "print(\"Best Parameters: \", knn_grid_search.best_params_)\n",
+        "y_pred_female = knn_grid_search.best_estimator_.predict(X_test_female)\n",
         "print(\"Classification Report for Males:\")\n",
         "print(classification_report(y_test_female, y_pred_female))\n"
       ],
@@ -1501,37 +1517,41 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "97fed829-641e-42ff-b9ba-42d01497bfad"
+        "outputId": "d0520cf7-2d48-4102-89c6-ad2f31558cec"
       },
-      "execution_count": 64,
+      "execution_count": 70,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
+            "Fitting 3 folds for each of 96 candidates, totalling 288 fits\n",
+            "Best Parameters:  {'metric': 'manhattan', 'n_neighbors': 5, 'p': 1, 'weights': 'distance'}\n",
             "Classification Report for Males:\n",
             "               precision    recall  f1-score   support\n",
             "\n",
-            "Normal weight       0.33      0.24      0.28       589\n",
-            "      Obesity       0.25      0.20      0.22       465\n",
-            "   Overweight       0.24      0.17      0.20       463\n",
-            "  Underweight       0.13      0.36      0.19       211\n",
+            "Normal weight       0.32      0.23      0.27       589\n",
+            "      Obesity       0.27      0.27      0.27       465\n",
+            "   Overweight       0.28      0.26      0.27       463\n",
+            "  Underweight       0.10      0.19      0.13       211\n",
             "\n",
-            "     accuracy                           0.23      1728\n",
-            "    macro avg       0.24      0.24      0.22      1728\n",
-            " weighted avg       0.26      0.23      0.23      1728\n",
+            "     accuracy                           0.24      1728\n",
+            "    macro avg       0.24      0.24      0.23      1728\n",
+            " weighted avg       0.27      0.24      0.25      1728\n",
             "\n",
+            "Fitting 3 folds for each of 96 candidates, totalling 288 fits\n",
+            "Best Parameters:  {'metric': 'manhattan', 'n_neighbors': 5, 'p': 1, 'weights': 'distance'}\n",
             "Classification Report for Males:\n",
             "               precision    recall  f1-score   support\n",
             "\n",
-            "Normal weight       0.34      0.24      0.28       995\n",
-            "      Obesity       0.27      0.25      0.26       787\n",
-            "   Overweight       0.28      0.22      0.24       826\n",
-            "  Underweight       0.13      0.32      0.18       372\n",
+            "Normal weight       0.34      0.27      0.30       995\n",
+            "      Obesity       0.26      0.25      0.26       787\n",
+            "   Overweight       0.28      0.25      0.26       826\n",
+            "  Underweight       0.12      0.23      0.16       372\n",
             "\n",
             "     accuracy                           0.25      2980\n",
-            "    macro avg       0.26      0.26      0.24      2980\n",
-            " weighted avg       0.28      0.25      0.25      2980\n",
+            "    macro avg       0.25      0.25      0.25      2980\n",
+            " weighted avg       0.28      0.25      0.26      2980\n",
             "\n"
           ]
         }
@@ -1545,6 +1565,103 @@
       "metadata": {
         "id": "tJGfTewQQCHU"
       }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Train Random Forest Classifier"
+      ],
+      "metadata": {
+        "id": "QtrycyrsSxLd"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sklearn.ensemble import RandomForestClassifier\n",
+        "from sklearn.model_selection import GridSearchCV\n",
+        "from sklearn.metrics import classification_report"
+      ],
+      "metadata": {
+        "id": "YYBSPADGSw01"
+      },
+      "execution_count": 65,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Initialize a Random Forest Classifier\n",
+        "rf = RandomForestClassifier(random_state = 42)\n",
+        "\n",
+        "# Hyperparameters to tune\n",
+        "param_grid = {\n",
+        "    'n_estimators': [50, 100, 200], # number of trees\n",
+        "    'max_depth': [None, 10, 20, 30], # maximum depth of the tree\n",
+        "    'min_samples_split': [2, 5, 10], # minimum number of samples required to split an internal node\n",
+        "    'min_samples_leaf': [1, 2, 4] # minimum number of samples required to be at a leaf node\n",
+        "}\n",
+        "\n",
+        "# Use GridSearchCV to find the best hyperparameters\n",
+        "grid_search = GridSearchCV(estimator = rf, param_grid = param_grid,\n",
+        "                           cv = 3, n_jobs = -1, verbose = 2,\n",
+        "                           scoring = 'accuracy')\n",
+        "\n",
+        "# Fit the model\n",
+        "grid_search.fit(X_train_male, y_train_male) # for males\n",
+        "print(\"Best Parameters for males: \", grid_search.best_params_)\n",
+        "\n",
+        "grid_search.fit(X_train_female, y_train_female) # for females\n",
+        "print(\"Best Parameters for females: \", grid_search.best_params_)\n",
+        "\n",
+        "# Predict on the test data\n",
+        "y_pred_males = grid_search.best_estimator_.predict(X_test_male)\n",
+        "print(classification_report(y_test_male, y_pred_males))\n",
+        "y_pred_females = grid_search.best_estimator_.predict(X_test_female)\n",
+        "print(classification_report(y_test_female, y_pred_females))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "rIPa-KrHTEiS",
+        "outputId": "da0774a1-1d93-4d90-cbc8-fc141e599a18"
+      },
+      "execution_count": 68,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Fitting 3 folds for each of 108 candidates, totalling 324 fits\n",
+            "Best Parameters for males:  {'max_depth': 30, 'min_samples_leaf': 1, 'min_samples_split': 2, 'n_estimators': 100}\n",
+            "Fitting 3 folds for each of 108 candidates, totalling 324 fits\n",
+            "Best Parameters for females:  {'max_depth': None, 'min_samples_leaf': 1, 'min_samples_split': 2, 'n_estimators': 200}\n",
+            "               precision    recall  f1-score   support\n",
+            "\n",
+            "Normal weight       0.32      0.31      0.31       589\n",
+            "      Obesity       0.26      0.26      0.26       465\n",
+            "   Overweight       0.27      0.24      0.26       463\n",
+            "  Underweight       0.11      0.16      0.13       211\n",
+            "\n",
+            "     accuracy                           0.26      1728\n",
+            "    macro avg       0.24      0.24      0.24      1728\n",
+            " weighted avg       0.27      0.26      0.26      1728\n",
+            "\n",
+            "               precision    recall  f1-score   support\n",
+            "\n",
+            "Normal weight       0.35      0.35      0.35       995\n",
+            "      Obesity       0.26      0.26      0.26       787\n",
+            "   Overweight       0.31      0.26      0.28       826\n",
+            "  Underweight       0.12      0.17      0.14       372\n",
+            "\n",
+            "     accuracy                           0.28      2980\n",
+            "    macro avg       0.26      0.26      0.26      2980\n",
+            " weighted avg       0.29      0.28      0.28      2980\n",
+            "\n"
+          ]
+        }
+      ]
     }
   ]
 }
